--- a/lesson1/2.html
+++ b/lesson1/2.html
@@ -16,7 +16,12 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  let name = "Anton"; //let потому, что в задании "создать переменную", а не константу
+
+  let admin = name;
+
+  console.log(admin);
+
 </script>
 </body>
 </html>
