--- a/lesson1/3.html
+++ b/lesson1/3.html
@@ -30,7 +30,26 @@ console.log(3 - 4 * 2);
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  console.log(10 + 10 + "10"); /* первые два значения числовые их складывает, а
+третье строковое его плюсует с помощью конкатенации. Консоль выводит 2010 */
+
+  console.log(10 + "10" + 10); /*первое число второе строка, их конкатенирует
+  третье число но уже первые два превратил в строку поэтому тоже склеивает.
+  Консоль выводит 101010 */
+
+  console.log(10 + 10 + +"10"); /*здесь в третьем значении второй+ выступает как
+   унарный оператор и превращает строку в число, поэтому всё складывается.
+   Консоль выводит 30 */
+
+  console.log(10 / -""); /*здесь также минус понимается как унарный оператор и 
+  пустое место превращает в ноль, а деление на ноль infinity, притом что у 
+  унарного операторы приоритет выше чем у деления поэтому он перым вычисляется.
+  Консоль выводит -Infinity */
+
+  console.log(10 / +"2,5"); /*Здесь нан потому что унарный оператор + не может
+  понять запятую и не распознает всё выражение целиком, а любое действие с нан 
+  будет нан. Консоль выводит NaN */
+  
 </script>
 </body>
 </html>
