--- a/lesson1/1.html
+++ b/lesson1/1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Обязательное задание.
 
 Необходимо пользователя попросить ввести температуру в градусах Цельсия,
@@ -19,10 +21,16 @@
 
 Уточнение: пользователь всегда вводит корректное число.
 -->
-<script>
-  "use strict";
+  <script>
+    "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
-</script>
+    const tCelsius = +prompt('Введите температуру в градусах Цельсия');
+
+    const tFahrenheit = (9 / 5) * tCelsius + 32;
+
+    alert(`Цельсий: ${tCelsius}, Фаренгейт: ${tFahrenheit}`);
+
+  </script>
 </body>
+
 </html>
