--- a/lesson1/2.html
+++ b/lesson1/2.html
@@ -16,9 +16,8 @@
 <script>
   "use strict";
 
-  let name = "Anton"; //let потому, что в задании "создать переменную", а не константу
-
-  let admin = name;
+  const name = "Anton"; 
+  const admin = name;
 
   console.log(admin);
 
