--- a/lesson1/3.html
+++ b/lesson1/3.html
@@ -42,7 +42,7 @@ console.log(3 - 4 * 2);
    Консоль выводит 30 */
 
   console.log(10 / -""); /*здесь также минус понимается как унарный оператор и 
-  пустое место превращает в ноль, а деление на ноль infinity, притом что у 
+  пустую строку превращает в ноль, а деление на ноль infinity, притом что у 
   унарного операторы приоритет выше чем у деления поэтому он перым вычисляется.
   Консоль выводит -Infinity */
 
