--- a/lesson1/1.html
+++ b/lesson1/1.html
@@ -25,8 +25,7 @@
     "use strict";
 
     const tCelsius = +prompt('Введите температуру в градусах Цельсия');
-
-    const tFahrenheit = (9 / 5) * tCelsius + 32;
+    const tFahrenheit = (Math.round(((9 / 5) * tCelsius + 32)*100))/100;
 
     alert(`Цельсий: ${tCelsius}, Фаренгейт: ${tFahrenheit}`);
 
