--- a/lesson1/4.html
+++ b/lesson1/4.html
@@ -28,7 +28,7 @@
 <script>
   "use strict";
 
-  const userNumber = prompt("Введите число"); //запрашиваем число
+  const userNumber = +prompt("Введите число"); //запрашиваем число
   
   const units = userNumber % 10; //Получаем единицы остатком от деления на 10
 
