--- a/Lesson2/5.html
+++ b/Lesson2/5.html
@@ -38,7 +38,8 @@ Infinity делать не нужно, однако, в случае если б
   console.log(mathOperation(15, 3, "/"));
   console.log(mathOperation(5, 3, ":)")); // NaN
 
-  /* Выполняет значение символа параметра operation используя другие функции
+  /**
+   * Выполняет значение символа параметра operation используя другие функции
    * @param {number} arg1 - первое число.
    * @param {number} arg2 - второе число.
    * @param {string} operation - один из символов: "+", "-", "*", "/".
@@ -55,7 +56,8 @@ Infinity делать не нужно, однако, в случае если б
     }
   }
 
-  /* Складывает два числа
+  /**
+   * Складывает два числа
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат сложения этих чисел
@@ -64,7 +66,8 @@ Infinity делать не нужно, однако, в случае если б
     return a + b;
   }
 
-  /* Вычитает из большего числа меньшее
+  /**
+   * Вычитает из большего числа меньшее
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат разности этих чисел
@@ -73,7 +76,8 @@ Infinity делать не нужно, однако, в случае если б
     return (a >= b) ? a - b : b - a;
   }
 
-  /* Перемножает два числа
+  /**
+   * Перемножает два числа
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат произведения этих чисел
@@ -82,7 +86,8 @@ Infinity делать не нужно, однако, в случае если б
     return a * b;
   }
 
-  /* Делит первое на второе число
+  /**
+   * Делит первое на второе число
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат произведения этих чисел
