--- a/Lesson2/4.html
+++ b/Lesson2/4.html
@@ -36,7 +36,8 @@
   console.log(getMultiplication (7, 20));
   console.log(getDivision (10, 4));
 
-  /* Складывает два числа
+  /**
+   * Складывает два числа
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат сложения этих чисел
@@ -45,7 +46,8 @@
     return a + b;
   }
 
-  /* Вычитает из большего числа меньшее
+  /**
+   * Вычитает из большего числа меньшее
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат разности этих чисел
@@ -54,7 +56,8 @@
     return (a >= b) ? a - b : b - a;
   }
 
-  /* Перемножает два числа
+  /**
+   * Перемножает два числа
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат произведения этих чисел
@@ -63,7 +66,8 @@
     return a * b;
   }
 
-  /* Делит первое на второе число
+  /**
+   * Делит первое на второе число
    * @param {number} a Первое число
    * @param {number} b Второе число
    * @return {number} Результат произведения этих чисел
