--- a/Lesson2/6.html
+++ b/Lesson2/6.html
@@ -27,9 +27,10 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
 
   console.log(declinationOfNumber(1, "яблоко", "яблока", "яблок")); // "яблоко"
   console.log(declinationOfNumber(122, "мяч", "мяча", "мячей")); // "мяча"
-  console.log(declinationOfNumber(25, "стул", "стула", "стульев")); // "стульев"
+  console.log(declinationOfNumber(14, "стул", "стула", "стульев")); // "стульев"
 
-  /* Определяет склонение заданного слова для заданного числа
+  /**
+   * Определяет склонение заданного слова для заданного числа
    * @param {int} num Первое число
    * @param {string} word1 Слово в склонении для 1 шт
    * @param {string} word2 Слово в склонении для 2-4 шт
@@ -39,7 +40,7 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
   function declinationOfNumber(num, word1, word2, word3) {
     if (num === 1 || (num % 10 === 1 && num % 100 > 20)) {
       return word1;
-    } else if ((num >= 2 && num <= 4) || (num % 10 >= 2 && num % 10 <= 4)) {
+    } else if ((num >= 2 && num <= 4) || (num % 10 >= 2 && num % 10 <= 4 && num % 100 > 20)) {
       return word2;
     } else {
       return word3;
